--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,7 +18,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "types": ["jest", "@testing-library/jest-dom"],
+    "jsx": "react-jsx"
   },
   "include": ["vite.config.ts"]
 }
