--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-essentials": "^8.6.11",
     "@storybook/addon-interactions": "^8.6.11",
     "@storybook/addon-onboarding": "^8.6.11",
+    "@storybook/addon-styling-webpack": "^1.0.1",
     "@storybook/blocks": "^8.6.11",
     "@storybook/experimental-addon-test": "^8.6.11",
     "@storybook/react": "^8.6.11",
