--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-portal": "^4.3.0",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
@@ -46,6 +46,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
@@ -61,6 +62,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "playwright": "^1.51.1",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "storybook": "^8.6.11",
     "ts-jest": "^29.2.6",
