--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-portal": "^4.3.0",
+    "react-router-dom": "^7.5.1",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
