--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "focus-trap-react": "^11.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-portal": "^4.3.0",
     "react-router-dom": "^7.5.1",
     "tailwindcss": "^4.1.3"
